--- a/website/src/index.html
+++ b/website/src/index.html
@@ -8,19 +8,20 @@
         <div class="wrapper">
 
             <nav class="mainNavigation">
-                <img src="../LM-Logo_blau.png" alt="Logo des LMG Anrath">
+                <img id= "logo" src="../LM-Logo_blau.png" alt="Logo des LMG Anrath">
                 <ul>
-                    <li><a href="Home">Home</a></li>
-                    <li><a href="Projekte">Projekte</a></li>
-                    <li><a href="Mitwirken">Mitwirken</a></li>
-                    <li><a href="About">About</a></li>
+                    <li><a href="home">Home</a></li>
+                    <li><a href="projekte">Projekte</a></li>
+                    <li><a href="mitwirken">Mitwirken</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="kontakt">Kontakt</a></li>
                 </ul>
             </nav>
 
             <main>
 
                 <div class="landerPage">
-                    <h1 class="lander-page-heading">Wetterstationen des LMG Anrath</h1>
+                    <h1 class="landerPageHeading">Wetterstationen des LMG Anrath</h1>
                     
                 </div>
                 <hr></hr>
