--- a/website/src/index.html
+++ b/website/src/index.html
@@ -9,7 +9,7 @@
     <header>
 
             <nav class="mainNavigation">
-                <img id= "logo" src="../LM-Logo_blau.png" alt="Logo des LMG Anrath">
+                <img id="lmgLogo" src="../images/lmg_logo_blau.svg" alt="Logo des LMG Anrath">
                 <ul>
                     <li><a href="home">Home</a></li>
                     <li><a href="projekte">Projekte</a></li>
@@ -19,7 +19,7 @@
                 </ul>
             </nav>
     </header>
-    
+
     <main>
 
         <div class="landerPage">
@@ -39,7 +39,7 @@
                 <div class="multi-column-layout">
 
                     <div class="card">
-                        <img src="../images/LM-Logo_blau.png" alt="Avatar" style="width:100%">
+                        <img class="cardImage" src="../images/LM-Logo_blau.png" alt="Avatar" style="width:100%">
                         <div class="container">
                             <h4><b>John Doe</b></h4>
                             <p>Architect & Engineer</p>
@@ -47,7 +47,7 @@
                     </div> 
 
                     <div class="card">
-                        <img src="../images/webseite_aktuell.png" alt="Avatar" style="width:100%">
+                        <img class="cardImage" src="../images/webseite_aktuell.png" alt="Avatar" style="width:100%">
                         <div class="container">
                             <h4><b>John Doe</b></h4>
                             <p>Architect & Engineer</p>
@@ -55,7 +55,7 @@
                     </div> 
 
                     <div class="card">
-                        <img src="../images/LM-Logo_blau.png" alt="Avatar" style="width:100%">
+                        <img class="cardImage" src="../images/LM-Logo_blau.png" alt="Avatar" style="width:100%">
                         <div class="container">
                             <h4><b>John Doe</b></h4>
                             <p>Architect & Engineer</p>
