--- a/website/src/index.html
+++ b/website/src/index.html
@@ -8,8 +8,9 @@
         <div class="wrapper">
     <header>
 
+            <img id="lmgLogo" src="../images/lmg_logo_blau.svg" alt="Logo des LMG Anrath">
+
             <nav class="mainNavigation">
-                <img id="lmgLogo" src="../images/lmg_logo_blau.svg" alt="Logo des LMG Anrath">
                 <ul>
                     <li><a href="home">Home</a></li>
                     <li><a href="projekte">Projekte</a></li>
@@ -18,6 +19,7 @@
                     <li><a href="kontakt">Kontakt</a></li>
                 </ul>
             </nav>
+
     </header>
 
     <main>
@@ -29,7 +31,7 @@
         <hr></hr>
 
         <div class="subTopic" class="whatWeDo">
-            <h2 class="h2Topics">Was wir machen</h2>
+            <h2 class="h2Topics">Die Wetterstations-AG</h2>
             <p>TextTextTextTextTextTextTextText</p>
         </div>
 
@@ -68,11 +70,12 @@
         </div>
 
         <div class="subTopic" class="aboutUs" >
-            <h2 class="h2Topics">Über die AG</h2>
+            <h2 class="h2Topics">Über die Mitglieder</h2>
             <p>TextTextTextTextTextTextTextText</p>
         </div>
 
     </main>
+    
     <footer>
         <h2 class="h2Topics">Kontakt:</h2>
         <ul>
