safety checkout and footer to end

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -41,26 +41,26 @@
                 <div class="multi-column-layout">
 
                     <div class="card">
-                        <img class="cardImage" src="../images/LM-Logo_blau.png" alt="Avatar" style="width:100%">
+                        <img class="cardImage" src="../images/wetterstationen_mit_gehauese.jpg" alt="Avatar" style="width:100%">
                         <div class="container">
-                            <h4><b>John Doe</b></h4>
-                            <p>Architect & Engineer</p>
+                            <h4><b>Wetterstationen</b></h4>
+                            <p>Messungen von Temperatur, Luftdruck, Luftfeuchtigkeit und Feinstaub</p>
                         </div>
                     </div> 
 
                     <div class="card">
                         <img class="cardImage" src="../images/webseite_aktuell.png" alt="Avatar" style="width:100%">
                         <div class="container">
-                            <h4><b>John Doe</b></h4>
-                            <p>Architect & Engineer</p>
+                            <h4><b>Windstationen</b></h4>
+                            <p>Messungen von Niederschlag, Windstärke und Windrichtung</p>
                         </div>
                     </div> 
 
                     <div class="card">
                         <img class="cardImage" src="../images/LM-Logo_blau.png" alt="Avatar" style="width:100%">
                         <div class="container">
-                            <h4><b>John Doe</b></h4>
-                            <p>Architect & Engineer</p>
+                            <h4><b>Tiedenhub</b></h4>
+                            <p>Messungen des Tiedenhubs in Kroatien</p>
                         </div>
                     </div> 
 
