image added, bg image added

--- a/website/src/home/index.html
+++ b/website/src/home/index.html
@@ -14,8 +14,8 @@
                 <ul>
                     <li><a href="home">Home</a></li>
                     <li><a href="projekte">Projekte</a></li>
+                    <li><a href="daten">Daten</a></li>
                     <li><a href="mitwirken">Mitwirken</a></li>
-                    <li><a href="about">About</a></li>
                     <li><a href="kontakt">Kontakt</a></li>
                 </ul>
             </nav>
@@ -25,9 +25,9 @@
     <main>
 
         <div class="landerPage">
-            <h1 class="landerPageHeading"><nav class="highlightedOrange">Wetterstationen</nav> des <nav class="highlightedBlue">LMG Anrath</nav></h1>
-            
+                <h1 class="landerPageHeading"><nav class="highlightedOrange">Wetterstationen</nav> des <nav class="highlightedBlue">LMG Anrath</nav></h1>
         </div>
+
         <hr></hr>
 
         <div class="subTopic" id="whatWeDo">
@@ -38,6 +38,7 @@
                 <div class="subTopicText" id="whatWeDoText">
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p></div>
                 <div class="subTopicImage">
+                    <img  id="lmgGebaeudeAussenansicht" src="../../images/lmg_anrath_gebauede.jpg" alt="Die Schule LMG aus Anrath photographiert aus der Aussenansicht">
                     <img  id="wetterstationen_mit_gehauese" src="../../images/wetterstationen_mit_gehauese.jpg" alt="Eine Messstation fuer Wetterdaten">
                 </div>
 
@@ -52,9 +53,9 @@
                 <div class="multi-column-layout">
 
                     <div class="card" id="weatherStationCard">
-                        <img class="cardImage" src="../../images/wetterstationen_mit_gehauese.jpg" alt="Avatar" style="width:100%">
+                        <img class="cardImage" src="../../images/wetterstationen_aufbau.jpg" alt="Avatar" style="width:100%">
                         <div class="container">
-                            <h4><b>Wetterstationen</b></h4>
+                            <h4>Wetterstationen</h4>
                             <p>Messungen von Temperatur, Luftdruck, Luftfeuchtigkeit und Feinstaub</p>
                         </div>
                     </div> 
@@ -62,7 +63,7 @@
                     <div class="card" id="windstationCard">
                         <img class="cardImage" src="../../images/webseite_aktuell.png" alt="Avatar" style="width:100%">
                         <div class="container">
-                            <h4><b>Windstationen</b></h4>
+                            <h4>Windstationen</h4>
                             <p>Messungen von Niederschlag, Windstärke und Windrichtung</p>
                         </div>
                     </div> 
@@ -70,7 +71,7 @@
                     <div class="card" id="tiedenhubCard">
                         <img class="cardImage" src="../../images/LM-Logo_blau.png" alt="Avatar" style="width:100%">
                         <div class="container">
-                            <h4><b>Tiedenhub</b></h4>
+                            <h4>Tiedenhub</h4>
                             <p>Messungen des Tiedenhubs in Kroatien</p>
                         </div>
                     </div> 
