added ref to other folders, not working yet

--- a/website/src/home/index.html
+++ b/website/src/home/index.html
@@ -12,11 +12,11 @@
 
             <nav class="mainNavigation">
                 <ul>
-                    <li><a href="home">Home</a></li>
-                    <li><a href="projekte">Projekte</a></li>
-                    <li><a href="daten">Daten</a></li>
-                    <li><a href="mitwirken">Mitwirken</a></li>
-                    <li><a href="kontakt">Kontakt</a></li>
+                    <li><a href="\src\home">Home</a></li>
+                    <li><a href="\src\projekte">Projekte</a></li>
+                    <li><a href="\src\daten">Daten</a></li>
+                    <li><a href="\src\mitwirken">Mitwirken</a></li>
+                    <li><a href="\src\kontakt">Kontakt</a></li>
                 </ul>
             </nav>
 
